--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8"
   },
