--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node ./bin/server.js",
+    "start": "node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js"
   },
   "keywords": [],
@@ -23,5 +23,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
