--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ DB_NAME= database name
 DB_HOST=mongodb+srv://<DB_USER>:<DB_USER_PASS>@cluster0.zavyu.mongodb.net/<DB_NAME>?retryWrites=true&w=majority
 //
 SECRET_KEY=secret key for JWT
+CLIENT_ID= Google Client ID
